--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   http: ^1.2.0
   model_viewer_plus: ^1.7.2
   lottie: ^3.1.0
+  image_picker: ^0.8.4+4
 
 dev_dependencies:
   flutter_test:
