--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   model_viewer_plus: ^1.7.2
   lottie: ^3.1.0
   image_picker: ^0.8.4+4
+  flutter_image_compress: ^2.2.0
+  path_provider: ^2.0.8
 
 dev_dependencies:
   flutter_test:
